Update MS DevBlog RSS Feed.ini
Rearranged Items to be clumped by item, rather than by use - I feel it was easier to read this way. Updated logic to add "topics" in addition to the main DevBlog feed landingpage.

--- a/RSS Feeds/MS DevBlog RSS Feed.ini
+++ b/RSS Feeds/MS DevBlog RSS Feed.ini
@@ -13,199 +13,133 @@ BackgroundMargins=15,35,15,15
 [Metadata]
 Name=Microsoft DevBlog RSS Feed
 Author=Clairefox
-Information=Microsoft Developer Blogs. Get the latest information, insights, announcements, and news from Microsoft.
-Version=1.0
+Information=Microsoft Developer Blogs
+Version=2.0
 License=Creative Commons Attribution - Non - Commercial - Share Alike 3.0
 
+;------------------------------------------------------------------------------
+; VARIABLES
+;------------------------------------------------------------------------------
 [Variables]
 ; CONFIGURATION
-ThemeColor       =50,150,220
-ThemeFont        =Calibri
-DefaultFont      =Calibri Light
+Topic            ="ALL"
+TopicUrl         ="landingpage"
+SetTopic         =[!SetOptionGroup Topic FontColor #Grey#]
+SelectedTopic    =1
 Item             =.*<item>.*<title>(.*)</title>.*<link>(.*)</link>
 ItemFontSize     =12
 ItemWidth        =350
 ItemHeight       =20
+ItemOver         ="  [\x21E2] "
+ItemLeave        ="  [\x21E2] "
+TopicText        =10
 TitleText        =15
+ThemeColor       =50,150,220
+ThemeFont        =Calibri
+DefaultFont      =Calibri Light
 
 ; COLOR PALETTE
 White            = 255,255,255
 Grey             = 200,200,200
-DarkGrey         = 100,100,100
 Blue             = 61,146,211
 
-[MicrosoftDevBlogRSSFeed]
+;------------------------------------------------------------------------------
+; MEASURES
+;------------------------------------------------------------------------------
+[MeasureSite]
 Measure=WebParser
-URL=https://devblogs.microsoft.com/landingpage/
+URL=https://devblogs.microsoft.com/#TopicUrl#
 RegExp="(?siU)#item##item##item##item##item##item##item##item##item##item#"
 DynamicVariables=1
+Debug=2
 
-;------------------------------------------------------------------------------
-; SITE INFO
-;------------------------------------------------------------------------------
-
-[MicrosoftDevBlogRSSFeedTitle]
+[MeasureSiteTitle]
 Measure=WebParser
-URL=[MicrosoftDevBlogRSSFeed]
+URL=[MeasureSite]
 StringIndex=1
 DecodeCharacterReference=1
 RegExpSubstitute=1
 Substitute=#Sub#
 
-[MicrosoftDevBlogRSSFeedLink]
+[MeasureSiteLink]
 Measure=WebParser
-URL=[MicrosoftDevBlogRSSFeed]
+URL=[MeasureSite]
 StringIndex=2
 
-[MicrosoftDevBlogRSSFeedDate]
-Measure=WebParser
-URL=[MicrosoftDevBlogRSSFeed]
-StringIndex=3
+[MeasureSelectedTopic]
+Measure=Calc
+Formula=#SelectedTopic#
+IfCondition=#SelectedTopic#=1
+IfTrueAction=#SetTopic#[!SetOption AllTopic FontColor #Blue#][!UpdateMeter AllTopic][!Redraw]
+IfCondition2=#SelectedTopic#=2
+IfTrueAction2=#SetTopic#[!SetOption DevOpsTopic FontColor #Blue#][!UpdateMeter DevOpsTopic][!Redraw]
+IfCondition3=#SelectedTopic#=3
+IfTrueAction3=#SetTopic#[!SetOption PowerShellTopic FontColor #Blue#][!UpdateMeter PowerShellTopic][!Redraw]
+IfCondition4=#SelectedTopic#=4
+IfTrueAction4=#SetTopic#[!SetOption DotNetTopic FontColor #Blue#][!UpdateMeter DotNetTopic][!Redraw]
+IfCondition5=#SelectedTopic#=5
+IfTrueAction5=#SetTopic#[!SetOption PythonTopic FontColor #Blue#][!UpdateMeter PythonTopic][!Redraw]
+DynamicVariables=1
 
 ;------------------------------------------------------------------------------
-; DEFINE RSS ITEMS
+; HEADER
 ;------------------------------------------------------------------------------
-
-[ItemStyle]
-W=#ItemWidth#
-H=#ItemHeight#
-Y=R
-FontSize=#ItemFontSize#
-FontColor=#white#,150
-FontFace=#DefaultFont#
-Prefix="  [\x21E2] "
+[TopicStyle]
+StringCase=UPPER
+FontColor=#White#
+FontSize=#TopicText#
+FontFace=#ThemeFont#
 AntiAlias=1
-ClipString=1
+X=10
+Y=10
 
-[Item1Title]
-Measure=WebParser
-Url=[MicrosoftDevBlogRSSFeed]
-StringIndex=1
-DecodeCharacterReference=1
+[AllTopic]
+Meter=String
+MeterStyle=TopicStyle
+Group=Topic
+Text="All"
+LeftMouseUpAction=[!SetVariable Topic "ALL"][!SetVariable TopicUrl "landingpage"][!SetVariable SelectedTopic 1][!CommandMeasure MeasureSite "Update"]
 
-[Item1Link]
-Measure=WebParser
-Url=[MicrosoftDevBlogRSSFeed]
-StringIndex=2
-DecodeCharacterReference=1
+[DevOpsTopic]
+Meter=String
+MeterStyle=TopicStyle
+Group=Topic
+Text="DevOps"
+X=20R
+LeftMouseUpAction=[!SetVariable Topic "DEVOPS"][!SetVariable TopicUrl "devops/feed"][!SetVariable SelectedTopic "2"][!CommandMeasure MeasureSite "Update"]
 
-[Item2Title]
-Measure=WebParser
-Url=[MicrosoftDevBlogRSSFeed]
-StringIndex=3
-DecodeCharacterReference=1
+[PowerShellTopic]
+Meter=String
+MeterStyle=TopicStyle
+Group=Topic
+Text="PWSH"
+X=20R
+LeftMouseUpAction=[!SetVariable Topic "PWSH"][!SetVariable TopicUrl "powershell/feed"][!SetVariable SelectedTopic "3"][!CommandMeasure MeasureSite "Update"]
 
-[Item2Link]
-Measure=WebParser
-Url=[MicrosoftDevBlogRSSFeed]
-StringIndex=4
-DecodeCharacterReference=1
+[DotNetTopic]
+Meter=String
+MeterStyle=TopicStyle
+Group=Topic
+Text=".NET"
+X=20R
+LeftMouseUpAction=[!SetVariable Topic "DOTNET"][!SetVariable TopicUrl "dotnet/feed"][!SetVariable SelectedTopic "4"][!CommandMeasure MeasureSite "Update"]
 
-[Item3Title]
-Measure=WebParser
-Url=[MicrosoftDevBlogRSSFeed]
-StringIndex=5
-DecodeCharacterReference=1
-
-[Item3Link]
-Measure=WebParser
-Url=[MicrosoftDevBlogRSSFeed]
-StringIndex=6
-DecodeCharacterReference=1
-
-[Item4Title]
-Measure=WebParser
-Url=[MicrosoftDevBlogRSSFeed]
-StringIndex=7
-DecodeCharacterReference=1
-
-[Item4Link]
-Measure=WebParser
-Url=[MicrosoftDevBlogRSSFeed]
-StringIndex=8
-DecodeCharacterReference=1
-
-[Item5Title]
-Measure=WebParser
-Url=[MicrosoftDevBlogRSSFeed]
-StringIndex=9
-DecodeCharacterReference=1
-
-[Item5Link]
-Measure=WebParser
-Url=[MicrosoftDevBlogRSSFeed]
-StringIndex=10
-DecodeCharacterReference=1
-
-[Item6Title]
-Measure=WebParser
-Url=[MicrosoftDevBlogRSSFeed]
-StringIndex=11
-DecodeCharacterReference=1
-
-[Item6Link]
-Measure=WebParser
-Url=[MicrosoftDevBlogRSSFeed]
-StringIndex=12
-DecodeCharacterReference=1
-
-[Item7Title]
-Measure=WebParser
-Url=[MicrosoftDevBlogRSSFeed]
-StringIndex=13
-DecodeCharacterReference=1
-
-[Item7Link]
-Measure=WebParser
-Url=[MicrosoftDevBlogRSSFeed]
-StringIndex=14
-DecodeCharacterReference=1
-
-[Item8Title]
-Measure=WebParser
-Url=[MicrosoftDevBlogRSSFeed]
-StringIndex=15
-DecodeCharacterReference=1
-
-[Item8Link]
-Measure=WebParser
-Url=[MicrosoftDevBlogRSSFeed]
-StringIndex=16
-DecodeCharacterReference=1
-
-[Item9Title]
-Measure=WebParser
-Url=[MicrosoftDevBlogRSSFeed]
-StringIndex=17
-DecodeCharacterReference=1
-
-[Item9Link]
-Measure=WebParser
-Url=[MicrosoftDevBlogRSSFeed]
-StringIndex=18
-DecodeCharacterReference=1
-
-[Item10Title]
-Measure=WebParser
-Url=[MicrosoftDevBlogRSSFeed]
-StringIndex=19
-DecodeCharacterReference=1
-
-[Item10Link]
-Measure=WebParser
-Url=[MicrosoftDevBlogRSSFeed]
-StringIndex=20
-DecodeCharacterReference=1
+[PythonTopic]
+Meter=String
+MeterStyle=TopicStyle
+Group=Topic
+Text="Python"
+X=20R
+LeftMouseUpAction=[!SetVariable Topic "PYTHON"][!SetVariable TopicUrl "python/feed"][!SetVariable SelectedTopic "5"][!CommandMeasure MeasureSite "Update"]
 
 ;------------------------------------------------------------------------------
-; BUILD RSS ITEMS
+; ITEMS
 ;------------------------------------------------------------------------------
-
 [MeterTitle]
 Meter=String
 Text="Microsoft"
-X=13r
-Y=8r
+X=13
+Y=20r
 FontColor=#white#
 FontSize=#TitleText#
 FontFace=#ThemeFont#
@@ -221,6 +155,35 @@ FontSize=#TitleText#
 FontFace=#ThemeFont#
 AntiAlias=1
 
+[ItemStyle]
+W=#ItemWidth#
+H=#ItemHeight#
+X=5
+Y=R
+FontSize=#ItemFontSize#
+FontColor=#white#,150
+FontFace=#DefaultFont#
+Prefix="  [\x21E2] "
+AntiAlias=1
+ClipString=1
+MouseOverAction=[!SetOption #CURRENTSECTION# Prefix "#itemOver#  "][!SetOption #CURRENTSECTION# FontColor "#Blue#"][!UpdateMeter #CURRENTSECTION#][!Redraw]
+MouseLeaveAction=[!SetOption #CURRENTSECTION# Prefix "#itemLeave#  "][!SetOption #CURRENTSECTION# FontColor "#white#,150"][!UpdateMeter #CURRENTSECTION#][!Redraw]
+
+;------------------------
+; ITEM 1
+;------------------------
+[Item1Title]
+Measure=WebParser
+Url=[MeasureSite]
+StringIndex=1
+DecodeCharacterReference=1
+
+[Item1Link]
+Measure=WebParser
+Url=[MeasureSite]
+StringIndex=2
+DecodeCharacterReference=1
+
 [Item1]
 Meter=String
 MeterStyle=ItemStyle
@@ -228,11 +191,41 @@ MeasureName=Item1Title
 LeftMouseUpAction=["[Item1Link]"]
 Y=R
 
+;------------------------
+; ITEM 2
+;------------------------
+[Item2Title]
+Measure=WebParser
+Url=[MeasureSite]
+StringIndex=3
+DecodeCharacterReference=1
+
+[Item2Link]
+Measure=WebParser
+Url=[MeasureSite]
+StringIndex=4
+DecodeCharacterReference=1
+
 [Item2]
 Meter=String
 MeterStyle=ItemStyle
 MeasureName=Item2Title
 LeftMouseUpAction=["[Item2Link]"]
+
+;------------------------
+; ITEM 3
+;------------------------
+[Item3Title]
+Measure=WebParser
+Url=[MeasureSite]
+StringIndex=5
+DecodeCharacterReference=1
+
+[Item3Link]
+Measure=WebParser
+Url=[MeasureSite]
+StringIndex=6
+DecodeCharacterReference=1
 
 [Item3]
 Meter=String
@@ -240,11 +233,41 @@ MeterStyle=ItemStyle
 MeasureName=Item3Title
 LeftMouseUpAction=["[Item3Link]"]
 
+;------------------------
+; ITEM 4
+;------------------------
+[Item4Title]
+Measure=WebParser
+Url=[MeasureSite]
+StringIndex=7
+DecodeCharacterReference=1
+
+[Item4Link]
+Measure=WebParser
+Url=[MeasureSite]
+StringIndex=8
+DecodeCharacterReference=1
+
 [Item4]
 Meter=String
 MeterStyle=ItemStyle
 MeasureName=Item4Title
 LeftMouseUpAction=["[Item4Link]"]
+
+;------------------------
+; ITEM 5
+;------------------------
+[Item5Title]
+Measure=WebParser
+Url=[MeasureSite]
+StringIndex=9
+DecodeCharacterReference=1
+
+[Item5Link]
+Measure=WebParser
+Url=[MeasureSite]
+StringIndex=10
+DecodeCharacterReference=1
 
 [Item5]
 Meter=String
@@ -252,11 +275,41 @@ MeterStyle=ItemStyle
 MeasureName=Item5Title
 LeftMouseUpAction=["[Item5Link]"]
 
+;------------------------
+; ITEM 6
+;------------------------
+[Item6Title]
+Measure=WebParser
+Url=[MeasureSite]
+StringIndex=11
+DecodeCharacterReference=1
+
+[Item6Link]
+Measure=WebParser
+Url=[MeasureSite]
+StringIndex=12
+DecodeCharacterReference=1
+
 [Item6]
 Meter=String
 MeterStyle=ItemStyle
 MeasureName=Item6Title
 LeftMouseUpAction=["[Item6Link]"]
+
+;------------------------
+; ITEM 7
+;------------------------
+[Item7Title]
+Measure=WebParser
+Url=[MeasureSite]
+StringIndex=13
+DecodeCharacterReference=1
+
+[Item7Link]
+Measure=WebParser
+Url=[MeasureSite]
+StringIndex=14
+DecodeCharacterReference=1
 
 [Item7]
 Meter=String
@@ -264,17 +317,62 @@ MeterStyle=ItemStyle
 MeasureName=Item7Title
 LeftMouseUpAction=["[Item7Link]"]
 
+;------------------------
+; ITEM 8
+;------------------------
+[Item8Title]
+Measure=WebParser
+Url=[MeasureSite]
+StringIndex=15
+DecodeCharacterReference=1
+
+[Item8Link]
+Measure=WebParser
+Url=[MeasureSite]
+StringIndex=16
+DecodeCharacterReference=1
+
 [Item8]
 Meter=String
 MeterStyle=ItemStyle
 MeasureName=Item8Title
 LeftMouseUpAction=["[Item8Link]"]
 
+;------------------------
+; ITEM 9
+;------------------------
+[Item9Title]
+Measure=WebParser
+Url=[MeasureSite]
+StringIndex=17
+DecodeCharacterReference=1
+
+[Item9Link]
+Measure=WebParser
+Url=[MeasureSite]
+StringIndex=18
+DecodeCharacterReference=1
+
 [Item9]
 Meter=String
 MeterStyle=ItemStyle
 MeasureName=Item9Title
 LeftMouseUpAction=["[Item9Link]"]
+
+;------------------------
+; ITEM 10
+;------------------------
+[Item10Title]
+Measure=WebParser
+Url=[MeasureSite]
+StringIndex=19
+DecodeCharacterReference=1
+
+[Item10Link]
+Measure=WebParser
+Url=[MeasureSite]
+StringIndex=20
+DecodeCharacterReference=1
 
 [Item10]
 Meter=String
